--- a/src/css/style.css
+++ b/src/css/style.css
@@ -167,7 +167,7 @@ footer {
 }
 
 .article__text {
-  font-size: .8em;
+  font-size: 1em;
   font-weight: 300;
   line-height: 20px;
   color: #615c5c
